--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,6 @@ EXPOSE 3000
 RUN apk add --update curl
 WORKDIR /usr/src/app
 
-# COPY package.json package-lock.json* ./
+COPY package.json package-lock.json* ./
 
 CMD [ "npm", "start" ]
