fix: upload circle/CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,17 +3,15 @@ jobs:
   build:
     docker:
       - image: circleci/node:13.1.0
-
-      working_directory: ~/mern-starter
-
-      steps:
-        - checkout
-        - restore_cache:
-            key: node_modules
-        - run:
-            name: Install npm
-            command: npm install
-        - save_cache:
-            key: node_modules
-            paths:
-              - node_modules
+    working_directory: ~/MERN_PROJECT
+    steps:
+      - checkout
+      - restore_cache:
+          key: node_modules
+      - run:
+          name: Install npm
+          command: npm install
+      - save_cache:
+          key: node_modules
+          paths:
+            - node_modules
