feat: create switch mode to login to sign up with name

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -69,7 +69,7 @@
     }],
     "no-duplicate-imports": "error",
     "no-eq-null": "error",
-    "no-undefined": "error",
+    "no-undefined": "off",
     "no-useless-computed-key": "error",
     "no-useless-constructor": "error",
     "no-useless-rename": "error",
