--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
     "prettier": "^1.19.1"
   }
 }
