--- a/backend/package.json
+++ b/backend/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "prettier": "^1.19.1"
+  },
+  "engines": {
+    "node": "^13.1.0"
   }
 }
