--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.1",
+    "mongoose": "^5.8.7",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
