--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.1",
+    "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
     "uuid": "^3.3.3"
   },
