--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express-validator": "^6.3.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
