--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.7",
     "mongoose-unique-validator": "^2.0.3",
+    "multer": "^1.4.2",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
