fix: change docker file to devs

--- a/backend/Dockerfile-dev
+++ b/backend/Dockerfile-dev
@@ -7,8 +7,8 @@ WORKDIR /usr/src/app
 
 COPY package.json package-lock.json* ./
 
-RUN npm install -g nodemon && cache clean --force
+RUN npm install -g nodemon
 
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "dev"]
