--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,34 @@
 version: 2
 jobs:
-  build:
+  lint:
     docker:
-      - image: circleci/node:13.1.0
+      - image: circleci/node:10.18.0-browsers
     working_directory: ~/MERN_PROJECT
     steps:
       - checkout
       - restore_cache:
-          key: node_modules
-      - run:
-          name: Install npm
-          command: npm install
+          keys:
+            - v1-node-deps-{{ checksum "backend/package.json" }}
+            - v1-node-deps-
+      - restore_cache:
+          keys:
+            - react-deps-{{ checksum "frontend/package.json" }}
+            - react-deps-
+      - run: (cd frontend ; npm install)
+      - run: (cd backend ; npm install)
       - save_cache:
-          key: node_modules
           paths:
-            - node_modules
+            - backend/node_modules
+          key: v1-node-deps-{{ checksum "backend/package.json" }}
+      - save_cache:
+          paths:
+            - client/node_modules
+          key: react-deps-{{ checksum "frontend/package.json" }}
+      - run: (cd frontend ; npm run lint)
+      - run: (cd backend ; npm run lint)
+
+workflows:
+  version: 2
+  default:
+    jobs:
+      - lint
