--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx",
     "lint-fix": "eslint . --fix --ext .ts,.tsx"
   },
   "eslintConfig": {
