--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "concurrently": "^5.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-node": "^4.0.0",
@@ -16,7 +15,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^1.19.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^5.0.2"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
