--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --ext .js,.jsx",
-    "lint-fix": "eslint . --fix --ext .ts,.tsx"
+    "lint-fix": "eslint . --fix --ext .js,.jsx"
   },
   "eslintConfig": {
     "extends": "react-app"
