--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,35 @@ jobs:
       - run: (cd frontend ; npm run lint)
       - run: (cd backend ; npm run lint)
 
+  test:
+    docker:
+      - image: circleci/node:10.18.0-browsers
+    working_directory: ~/MERN_PROJECT
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-node-deps-{{ checksum "backend/package.json" }}
+            - v1-node-deps-
+      - restore_cache:
+          keys:
+            - react-deps-{{ checksum "frontend/package.json" }}
+            - react-deps-
+      - run: (cd frontend ; npm install)
+      - run: (cd backend ; npm install)
+      - save_cache:
+          paths:
+            - backend/node_modules
+          key: v1-node-deps-{{ checksum "backend/package.json" }}
+      - save_cache:
+          paths:
+            - client/node_modules
+          key: react-deps-{{ checksum "frontend/package.json" }}
+      - run: (cd frontend; npm run test)
+
 workflows:
   version: 2
   default:
     jobs:
       - lint
+      - test
