--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^5.8.7",
     "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
+    "slugify": "^1.3.6",
     "uuid": "^3.3.3"
   },
   "devDependencies": {
